crates/ty_python_semantic/resources/mdtest/snapshots/scoping.md_-_Scoping_rules_for_ty…_-_Type_parameter_defau…_-_Function_nested_in_c…_(1a50b4ccb10b95dd).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 624
expression: snapshot
---

---
mdtest name: scoping.md - Scoping rules for type variables - Type parameter defaults cannot reference outer-scope type parameters - Function nested in class
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/scoping.md
---

# Python source files

## mdtest_snippet.py

```
1 | class C[T]:
2 |     # error: [invalid-type-variable-default]
3 |     def f[U = T](self): ...
4 |     def g[U = int](self): ...  # OK
```

# Diagnostics

```
error[invalid-type-variable-default]: Invalid default for type parameter `U`
 --> src/mdtest_snippet.py:1:9
  |
1 | class C[T]:
  |         - `T` defined here
2 |     # error: [invalid-type-variable-default]
3 |     def f[U = T](self): ...
  |               ^ `T` is a type parameter bound in an outer scope
4 |     def g[U = int](self): ...  # OK
  |
info: See https://typing.python.org/en/latest/spec/generics.html#scoping-rules
info: rule `invalid-type-variable-default` is enabled by default

```
